Fix T46202: OS X (and Windows?) crash when going fullscreen.

Calling event handling recursively during window live resize is problematic,
the code wasn't designed to do that. Instead postpone event handling until
after live resize.